Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13994

osc_object_ast_clear()) ASSERTION( lvb != ((void *)0) ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      osc_object_ast_clear() is called for mdc object on eviction

      Replace osc_object_prune() with cl_object_prune()

      PID: 3477 TASK: ffff9360d82fa0e0 CPU: 0 COMMAND: "ll_imp_inval"
      #0 [ffff9360d5c5b990] machine_kexec at ffffffff86865704
      #1 [ffff9360d5c5b9f0] __crash_kexec at ffffffff869209a2
      #2 [ffff9360d5c5bac0] panic at ffffffff86f7294c
      #3 [ffff9360d5c5bb40] lbug_with_loc at ffffffffc04b78cb [libcfs]
      #4 [ffff9360d5c5bb60] osc_object_ast_clear at ffffffffc0956471 [osc]
      #5 [ffff9360d5c5bbc8] ldlm_resource_foreach at ffffffffc07e2fd6 [ptlrpc]
      #6 [ffff9360d5c5bc08] ldlm_resource_iterate at ffffffffc07e3266 [ptlrpc]
      #7 [ffff9360d5c5bc38] osc_object_prune at ffffffffc0956140 [osc]
      #8 [ffff9360d5c5bc58] osc_object_invalidate at ffffffffc0956e12 [osc]
      #9 [ffff9360d5c5bcd0] osc_ldlm_resource_invalidate at ffffffffc09477bf [osc]

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: